# HEAR

./: LICENSE  README.md
dataset/: test_label.csv  test_prob_conv1d_128.csv  test_prob_conv1d_64.csv  test_prob_conv2d_128.csv  test_prob_conv2d_64.csv
dataset/parameters_conv1d_128/: act1.alpha_torch.Size([1]).csv  act1.beta_torch.Size([1]).csv  act1.c_torch.Size([1]).csv  act2.alpha_torch.Size([1]).csv  act2.beta_torch.Size([1]).csv  act2.c_torch.Size([1]).csv  act3.alpha_torch.Size([1]).csv  act3.beta_torch.Size([1]).csv  act3.c_torch.Size([1]).csv  bn1.bias_torch.Size([128]).csv  bn1.running_mean_torch.Size([128]).csv  bn1.running_var_torch.Size([128]).csv  bn1.weight_torch.Size([128]).csv  bn2.bias_torch.Size([256]).csv  bn2.running_mean_torch.Size([256]).csv  bn2.running_var_torch.Size([256]).csv  bn2.weight_torch.Size([256]).csv  bn3.bias_torch.Size([512]).csv  bn3.running_mean_torch.Size([512]).csv  bn3.running_var_torch.Size([512]).csv  (+8 more)
testing/: CMakeLists.txt
testing/src/: HECNNencryptor_conv1d.cpp  HECNNencryptor_conv1d.h  HECNNencryptor_conv2d.cpp  HECNNencryptor_conv2d.h  HECNNevaluator_conv1d.cpp  HECNNevaluator_conv1d.h  HECNNevaluator_conv2d.cpp  HECNNevaluator_conv2d.h  HECNNevaluator_sota.cpp  HECNNevaluator_sota.h  Test_HEAR.cpp  Test_HEAR.h  Test_lola.cpp  Test_lola.h  Test_ngraph.cpp  Test_ngraph.h  main_HEAR.cpp  main_accuracy.cpp  main_sota.cpp  param.cpp  param.h  thread.cpp  thread.h  utils.cpp  utils.h
training/: HEnet.py  HEnet2D.py  README.md  dataset.py  extract.py  extract_dataset.py  sampler.py  test.py  train.py
(+97 files in other folders)
